--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -7,3 +7,6 @@ vich_uploader:
             uri_prefix: /media
             upload_destination: '%kernel.project_dir%/public/media'
             namer: Vich\UploaderBundle\Naming\OrignameNamer
+
+            delete_on_remove: true  # determine whether to delete file upon removal of entity
+            delete_on_update: true  # determine wheter to delete the file upon update of entity
