--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,15 +1,18 @@
 api_platform:
-    title: Hello API Platform
-    version: 1.0.0
+    formats:
+        jsonld: [ 'application/ld+json' ]
+        json: [ 'application/json' ]
+        html: [ 'text/html' ]
+        jsonhal: [ 'application/hal+json' ]
+
     swagger:
         api_keys:
-            JWT:
+            # overridden in OpenApiFactoryDecorator
+            access_token:
                 name: Authorization
                 type: header
-    # Good defaults for REST APIs
-    defaults:
-        stateless: true
-        cache_headers:
-            vary: ['Content-Type', 'Authorization', 'Origin']
-        extra_properties:
-            standard_put: true
+
+#    enable_docs: false
+#    enable_entrypoint: false
+#    enable_swagger: false
+#    enable_swagger_ui: false
