--- a/package.json
+++ b/package.json
@@ -25,6 +25,22 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@api-platform/api-doc-parser": "^0.16.2"
+        "@api-platform/api-doc-parser": "^0.16.2",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.18",
+        "@mui/styles": "^5.14.18",
+        "@mui/utils": "^5.14.18",
+        "final-form": "^4.20.10",
+        "jwt-decode": "^4.0.0",
+        "next": "^14.0.3",
+        "next-auth": "^4.24.5",
+        "prop-types": "^15.8.1",
+        "ra-data-simple-rest": "^4.16.0",
+        "react-admin": "^4.16.0",
+        "react-final-form": "^6.5.9",
+        "react-query": "^3.39.3",
+        "react-router-dom": "^6.19.0",
+        "react-scripts": "^5.0.1"
     }
 }
